# uneseule_server

./: .env  .env.example  CLAUDE.md  README.md  alembic.ini  main.py  pyproject.toml
.claude/: CLAUDE.md
.claude/plans/: jazzy-skipping-treasure.md
.serena/: project.yml
app/api/v1/device/: auth.py  router.py
app/core/: config.py  dependencies.py  events.py  security.py
app/graphql/: context.py  schema.py
app/graphql/mutations/: child.py  device.py  user.py
app/graphql/queries/: __init__.py  device.py  user.py
app/graphql/types/: __init__.py  base.py  child.py  device.py  subscription.py  user.py
app/integrations/: elevenlabs.py  livekit.py  nosql.py
app/models/: __init__.py  base.py  child.py  device.py  subscription.py  user.py  user_profile.py
app/repositories/: child_repository.py  device_repository.py  user_profile_repository.py  user_repository.py
app/schemas/: device.py
app/services/: child_service.py  device_service.py  user_profile_service.py  user_service.py  voice_token_service.py
app/utils/: webhook_validators.py
migrations/: env.py
migrations/versions/: 4914e5ef88b4_initial_schema_users_children_devices_.py  b3c7d8e9f012_replace_users_with_user_profiles.py
tests/: conftest.py
tests/e2e/: test_device_token_api.py  test_graphql_api.py
tests/unit/: test_child_service.py  test_clerk_auth.py  test_device_auth.py  test_device_service.py  test_elevenlabs_client.py  test_graphql_queries.py  test_livekit_client.py  test_neon_auth.py  test_user_profile_service.py  test_user_service.py  test_voice_token_service.py
(+2 files in other folders)
